<resources>
    <string name="app_name"> شربك للاتصالات</string>
    <string name="bottom">Bottom</string>
    <string name="loading">Loading</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Users</string>
    <string name="menu_sim_one">Sim One Settings</string>
    <string name="menu_sim_all">Sim All Settings</string>
    <string name="mobile_number_or_code">Mobile Number/Code: </string>
    <string name="mobile_number1">Mobile Number </string>
    <string name="person">person</string>
    <string name="balance">Balance</string>
    <string name="price">Price</string>
    <string name="user_settings">User Settings</string>
    <string name="sim_settings">Sim Settings</string>
    <string name="balance_transfer">Balance Transfer</string>
    <string name="bill_transfer">Bill Transfer</string>
    <string name="log">Log</string>
    <string name="save_num">Save Number</string>
    <string name="sim1_settings">Sim1 Settings</string>
    <string name="syriatel">Syriatel</string>
    <string name="mtn">MTN</string>
    <string name="code_for_sim">Code For Sim</string>
    <string name="sim2_settings">Sim2 Settings</string>
    <string name="sim_code">Sim Code</string>
    <string name="save">Save</string>
    <string name="user_name">User Name: </string>
    <string name="code">Code</string>
    <string name="_left">(</string>
    <string name="attempt_num">Attempt Num</string>
    <string name="_right">)</string>
    <string name="enable_type">Enable Type</string>
    <string name="fix_enable">Fix Enable</string>
    <string name="code_for_distributor">Code for Distributor</string>
    <string name="client_name">Client Name</string>
    <string name="save_number">Save Number</string>
    <string name="err_not_phone">Please Enter Valid Phone Number !</string>
    <string name="err_balance">Balance must be valid value !</string>
    <string name="mobile_num_required">Mobile Number is Required</string>
    <string name="balance_required">Balance is Required</string>
    <string name="err_client_name">Please Enter Client Name</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="err_two_syriatel">Please Select Syriatel and MTN not Only Syriatel for two sims</string>
    <string name="err_two_mtn">Please Select Syriatel and MTN not Only MTN for two sims</string>
    <string name="money_amount">Money Amount: </string>
    <string name="user_saved">User Saved</string>
    <string name="by_late">Pay By Late</string>
    <string name="users_loan_list">Users Loan List</string>
    <string name="mobile_already_registered">Mobile is Already Registered</string>
    <string name="saved">Saved</string>
    <string name="error">Error (You must save Mobile Number with name)</string>
    <string name="cash_or_loan">Cash or Loan</string>
    <string name="balance_or_bill">Balance or Bill</string>
    <string name="company">Company</string>
    <string name="bill">Bill</string>
    <string name="transfers_log">Transfers Log</string>
    <string name="no_transfers_yet">There is No Transfers Yet!</string>
    <string name="no_loan_users_yet">There is No Loan Users Yet!</string>
    <string name="no_users_saved">There is No Users Saved Yet!</string>
    <string name="transfer_done">Transfer Done Successfully</string>
    <string name="date">Transfer Date</string>
    <string name="balance2">Balance</string>
    <string name="users_loan">Users Loan</string>
    <string name="fixed_enable">Fixed Enable</string>
    <string name="pay_part">Pay Part</string>
    <string name="email">Email</string>
    <string name="all_loan_amount">All Loan Amount:</string>
    <string name="money_amount_payed">Money Amount Paid</string>
    <string name="err_money_payed">Please Enter Paid Money Amount</string>
    <string name="err_money_payed_value_unvalid">Please Enter Valid Paid Money Amount</string>
    <string name="select_by_specific_date">Select By Specific Date</string>
    <string name="select_by_specific_user">Select By Specific User</string>
    <string name="no_transfers_in_this_date">There is No Transfers in Selected Date!</string>
    <string name="all_attempts_count">All Attempts Count: </string>
    <string name="still_attempts_count">Still Attempts Count: </string>
    <string name="request_attempts">Request Attempts</string>
    <string name="user_deleted">User Deleted…</string>
    <string name="delete">Delete</string>
    <string name="code_here">Enable Code Here</string>
    <string name="user_code">User Code Enable</string>
    <string name="code_required">Code Required</string>
    <string name="err_price_required">Price Required</string>
    <string name="err_somthing_wrong">Something went wrong</string>
    <string name="money_amount1">Money Amount</string>
    <string name="user_name1">User Name</string>
    <string name="benefits">Benefits</string>
    <string name="benefits_for_all">Benefits For All</string>
    <string name="benefits_for_one">Benefits For One</string>
    <string name="sells">Sells</string>
    <string name="cost">Cost</string>
    <string name="perm_granted">Permission Granted</string>
    <string name="transfering">Transferring…</string>
    <string name="user_saved_on_server">User Saved on Server</string>
    <string name="transfer_saved_on_server">Transfer Saved on Server</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="user_logged_in">User Logged in</string>
    <string name="password">Password</string>
    <string name="mobile_permit">Mobile Permit</string>
    <string name="mobile_id">Mobile Id</string>
    <string name="verify_mobile_permit">Verify Mobile Permit</string>
    <string name="input_mobile_id">Input Mobile Id</string>
    <string name="enable_code">Enable Code</string>
    <string name="enable">Enable</string>
    <string name="syc_upated">Sync Updated</string>
    <string name="syc_with_server">Sync With Server</string>
    <string name="err_no_internet">Check You Internet Connection</string>
    <string name="err_enable">Something is error, maybe you are using before used enable code</string>
    <string name="enabled_ok">Enable Done</string>
    <string name="temp_enable_code">Temp Enable Code</string>
    <string name="temp_enable">Temp Enable</string>
    <string name="for_contact">for contact:</string>
    <string name="_0967283407">0967283407</string>
    <string name="_0967283407_2">0967283407 – 0996707127</string>

    <string name="logout">Logout</string>
    <string name="let_transfer_easier">Let Transfer Easier</string>
    <string name="user_logged_out">User Logged out</string>
    <string name="share_app_with_friends">Share App With Friends</string>
    <string name="choose_one">Choose One…</string>
    <string name="recommend_msg">\nLet me recommend you this application\n\n</string>
    <string name="select_for_client">Select For Client</string>
    <string name="client_code">Client Code</string>
    <string name="err_not_settings">You must set settings before in sim settings ui</string>
    <string name="call_us">Call Us</string>
    <string name="about_us">About Us</string>
    <string name="tad">Produced By Tad Company for Mobile Solutions</string>
    <string name="version">Version 1 of Transfer Application</string>
    <string name="tad_url"><u>https://tadcenter.net</u></string>
    <string name="app_question">Ask Questions about Transfer Application</string>
    <string name="to_contact">To Contact:</string>
    <string name="whatsapp_icon">whatsapp icon</string>
    <string name="err_in_login">Error in Login</string>
    <string name="user_logged_in_on_second_device">User is Logged in on Another Device</string>
    <string name="must_activate">Must Activate</string>
    <string name="center_details">Center Details</string>
    <string name="center_name">Center Name: </string>
    <string name="center_city">Center City: </string>
    <string name="center_address">Center Address: </string>
    <string name="center_users_count">Users Count: </string>
    <string name="center_used_users_count">Used Users Count: </string>
    <string name="you_must_sync">You must Sync Before.</string>
    <string name="homs_city">Homs</string>
    <string name="dablan">Al-Dablan</string>
    <string name="main_app">Sharbek Telecom</string>
    <string name="accessibility_service_description">accessibility_service_description</string>
    <string name="syriatel_code_for_deliver">Syriatel Code for Deliver</string>
    <string name="err_specify_syriatel_code">Please Specify Syriatel Code For Deliver Before!</string>
    <string name="err_check_syriatel_code">Please Check Syriatel Code For Deliver Before!</string>
    <string name="select_for_me">Balance:</string>
    <string name="mtn_ones">MTN ones</string>
    <string name="mtn_bills">MTN Bills</string>
    <string name="syriatel_ones">Syriatel Ones</string>
    <string name="syriatel_bills">Syriatel Bills</string>

    <string-array name="company_type">
        <item>Syriatel By Plurals</item>
        <item>MTN By Plurals</item>
        <item>MTN By Plurals Bills</item>
        <!--        <item>Mobile Permission</item>-->
    </string-array>

    <string-array name="select_by">
        <item>Syriatel One</item>
        <item>MTN One</item>
        <item>Syriatel All</item>
        <item>MTN All</item>
    </string-array>
</resources>