<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tele.ramitelecom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="user"
            app:argType="com.tele.ramitelecom.ui.users.UserModel"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_users_settings"
            app:destination="@id/nav_users_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_transfers_log"
            app:destination="@id/nav_one_transfers_log" />

        <action
            android:id="@+id/action_nav_home_to_nav_select_for_client"
            app:destination="@id/nav_select_for_client" />
        <action
            android:id="@+id/action_nav_home_to_nav_center"
            app:destination="@id/nav_center_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_users_settings"
        android:name="com.tele.ramitelecom.ui.users.UserSettingsFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_user_settings">
        <argument
            android:name="isUser"
            app:argType="boolean" />
        <argument
            android:name="delegate"
            app:argType="com.tele.ramitelecom.ui.users.UserDelegate"
            app:nullable="true" />
        <action
            android:id="@+id/backToA"
            app:destination="@+id/nav_home"
            app:popUpTo="@+id/nav_users_settings"
            app:popUpToInclusive="true" />
        <!--        1 from home , 2 from transfers log-->
        <argument
            android:name="from"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/backToB"
            app:destination="@+id/nav_one_transfers_log"
            app:popUpTo="@+id/nav_users_settings"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_users_loans"
        android:name="com.tele.ramitelecom.ui.users_loan.UsersLoanFragment"
        android:label="@string/users_loan"
        tools:layout="@layout/fragment_users_loan_settings">

        <action
            android:id="@+id/backToA"
            app:destination="@+id/nav_home"
            app:popUpTo="@+id/nav_users_loans"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_one_transfers_log"
        android:name="com.tele.ramitelecom.ui.transfers.one.OneTransferLogFragment"
        android:label="@string/transfers_log"
        tools:layout="@layout/fragment_one_transfer_log">
        <argument
            android:name="user"
            app:argType="com.tele.ramitelecom.ui.users.UserModel"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_users_settings1"
            app:destination="@id/nav_users_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_all_transfers_log"
        android:name="com.tele.ramitelecom.ui.transfers.all.AllTransferLogFragment"
        android:label="@string/transfers_log"
        tools:layout="@layout/fragment_all_transfer_log" />

    <fragment
        android:id="@+id/nav_center_details"
        android:name="com.tele.ramitelecom.ui.center_details.CenterDetailsFragment"
        android:label="@string/center_details"
        tools:layout="@layout/fragment_center" />

    <fragment
        android:id="@+id/nav_sim_one_settings"
        android:name="com.tele.ramitelecom.ui.sim_one_settings.SimOneSettingsFragment"
        android:label="@string/menu_sim_one"
        tools:layout="@layout/fragment_sim_one_settings" />

    <fragment
        android:id="@+id/nav_sim_all_settings"
        android:name="com.tele.ramitelecom.ui.sim_all_settings.SimAllSettingsFragment"
        android:label="@string/menu_sim_all"
        tools:layout="@layout/fragment_sim_all_settings" />

    <fragment
        android:id="@+id/nav_syriatel_code_for_deliver_settings"
        android:name="com.tele.ramitelecom.ui.syriatel_code_deliver.SyriatelCodeForDeliverFragment"
        android:label="@string/syriatel_code_for_deliver"
        tools:layout="@layout/fragment_syriatel_code_for_deliver" />

    <fragment
        android:id="@+id/nav_benefits"
        android:name="com.tele.ramitelecom.ui.benefits.BenefitsFragment"
        android:label="@string/benefits"
        tools:layout="@layout/fragment_benefits" />

    <fragment
        android:id="@+id/nav_user_code"
        android:name="com.tele.ramitelecom.ui.users_code.UserCodeFragment"
        android:label="@string/user_code"
        tools:layout="@layout/fragment_user_code">
        <action
            android:id="@+id/action_nav_user_code_to_nav_all_transfers_log"
            app:destination="@id/nav_all_transfers_log" />
    </fragment>
    <fragment
        android:id="@+id/nav_mobile_permit"
        android:name="com.tele.ramitelecom.ui.mobile_permit.MobilePermitFragment"
        android:label="@string/mobile_permit"
        tools:layout="@layout/fragment_user_code" />

    <fragment
        android:id="@+id/nav_select_for_client"
        android:name="com.tele.ramitelecom.ui.select_for_client.SelectForClientFragment"
        android:label="@string/select_for_client"
        tools:layout="@layout/fragment_select_for_client" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.tele.ramitelecom.ui.logout.LogoutFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.tele.ramitelecom.ui.share.ShareFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_call_us"
        android:name="com.tele.ramitelecom.ui.call_us.CallUsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.tele.ramitelecom.ui.about_us.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>