<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="9"
                android:background="@drawable/rounded"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/client_name"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/person"
                android:src="@drawable/ic_person" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="9"
                android:background="@drawable/rounded"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/mobile_number1"
                android:inputType="phone"
                tools:ignore="Autofill,LabelFor" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/person"
                android:src="@drawable/ic_call" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveClient"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#4caf50"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:icon="@android:drawable/ic_menu_save"
                app:iconGravity="textStart"
                app:iconTint="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
